test/regress/coverage-item-tag-errors.test
; Test item.cc: tag() and has_tag() error paths
; Exercises tag with 0 args, too many args
; Exercises tag with bad arg type
; Exercises tag with 2 string args
; Exercises has_tag with 0 args, too many args
; Exercises has_tag with bad arg type
; Exercises has_tag with 2 string args

2024/01/15 Grocery Store
    Expenses:Food    $50.00
    Assets:Checking

test reg --format "%(tag())\n" Expenses -> 1
__ERROR__
While evaluating value expression:
  tag()
  ^^^^^
While calling function 'tag ':
While handling posting from "$FILE", line 10:
>     Expenses:Food    $50.00
Error: Too few arguments to function
end test

test reg --format "%(tag(\"a\", \"b\", \"c\"))\n" Expenses -> 1
__ERROR__
While evaluating value expression:
  tag("a", "b", "c")
  ^^^^^^^^^^^^^^^^^^
While calling function 'tag (<#EXPR "a">, <#EXPR "b">, <#EXPR "c">)':
While handling posting from "$FILE", line 10:
>     Expenses:Food    $50.00
Error: Too many arguments to function
end test

test reg --format "%(tag(5))\n" Expenses -> 1
__ERROR__
While evaluating value expression:
  tag(5)
  ^^^^^^
While calling function 'tag 5':
While handling posting from "$FILE", line 10:
>     Expenses:Food    $50.00
Error: Expected string or mask for argument 1, but received an amount
end test

test reg --format "%(tag(\"a\", \"b\"))\n" Expenses -> 1
__ERROR__
While evaluating value expression:
  tag("a", "b")
  ^^^^^^^^^^^^^
While calling function 'tag (a, b)':
While handling posting from "$FILE", line 10:
>     Expenses:Food    $50.00
Error: Expected masks for arguments 1 and 2, but received a string and a string
end test

test reg --limit "has_tag()" Expenses -> 1
__ERROR__
While evaluating value expression:
  (has_tag() & (account =~ /Expenses/))
   ^^^^^^^^^
While calling function 'has_tag ':
While handling posting from "$FILE", line 10:
>     Expenses:Food    $50.00
Error: Too few arguments to function
end test

test reg --limit "has_tag(\"a\", \"b\", \"c\")" Expenses -> 1
__ERROR__
While evaluating value expression:
  (has_tag("a", "b", "c") & (account =~ /Expenses/))
   ^^^^^^^^^^^^^^^^^^^^^^
While calling function 'has_tag (<#EXPR "a">, <#EXPR "b">, <#EXPR "c">)':
While handling posting from "$FILE", line 10:
>     Expenses:Food    $50.00
Error: Too many arguments to function
end test

test reg --limit "has_tag(5)" Expenses -> 1
__ERROR__
While evaluating value expression:
  (has_tag(5) & (account =~ /Expenses/))
   ^^^^^^^^^^
While calling function 'has_tag 5':
While handling posting from "$FILE", line 10:
>     Expenses:Food    $50.00
Error: Expected string or mask for argument 1, but received an amount
end test

test reg --limit "has_tag(\"a\", \"b\")" Expenses -> 1
__ERROR__
While evaluating value expression:
  (has_tag("a", "b") & (account =~ /Expenses/))
   ^^^^^^^^^^^^^^^^^
While calling function 'has_tag (a, b)':
While handling posting from "$FILE", line 10:
>     Expenses:Food    $50.00
Error: Expected masks for arguments 1 and 2, but received a string and a string
end test
